syntax = "proto3";

option go_package = "./common/model";

message Todo {
    string id = 1;
    string name = 2;
    string todo = 3;
}

import "google/protobuf/empty.proto";
import "google/api/annotations.proto";

message TodoList {
    repeated Todo list = 1;
}

service Todos {
    rpc CreateTodo(Todo) returns (MutationResponse){
        option (google.api.http) = {
        post : "/v1/todos",
        body:"*"
        };
    }
    rpc List(google.protobuf.Empty) returns (TodoList) {
        option (google.api.http) = {
            get : "/v1/users",
        };
    }

    rpc Update(UpdateRequest) returns (MutationResponse) {
        option (google.api.http) = {
            put : "/todos/{id}",
            body : "*",
        };
    }

    rpc Delete(DeleteRequest) returns (MutationResponse) {
        option (google.api.http) = {
        delete : "/todos/{id}",
        };
    }

}

message MutationResponse {
  string success = 1;
}

message GetAllResponse {
  repeated Todo data = 1;
}

message UpdateRequest {
  string id = 1;
  string name = 2;
  string todo = 3;
}

message DeleteRequest {
  string id = 1;
}
